# inter-thread-comm

./: .clang-format  .gitignore  CMakeLists.txt  MsgQueue.hpp  README.md
backend/: RingBuf.hpp  RingIterator.hpp
ut/: CMakeLists.txt  ut_dummy.cpp  ut_msgqueue.cpp  ut_ringbuf.cpp
